Closed Bug 1144257 Opened 11 years ago Closed 11 years ago

DXVA: Firefox crashed when opening right click menu

Categories

(Core :: Audio/Video, defect, P1)

38 Branch
x86
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox37 + wontfix
firefox38 + fixed
firefox38.0.5 --- fixed
firefox39 + fixed
firefox40 --- fixed

People

(Reporter: ssimon, Assigned: mattwoodrow)

References

(Blocks 1 open bug)

Details

(Whiteboard: [betabreakers-fx38] [gfx-noted])

Attachments

(1 file)

* Windows 7 Ultimate 32 bit * Intel Core 2 Quad Q6600 * Nvidia GeForce 8800 GTS This is what I did to get the crash: While running tests, load the three background videos. Right click on a hyperlink on a page Crash Crash Report: https://crash-stats.mozilla.com/report/index/7bbddda8-2735-4df4-9722-a82fc2150317 about:support: https://drive.google.com/file/d/0B16LK2xBSdvISVRoVFFrTkZyRWM/view?usp=sharing dxdiag: https://drive.google.com/file/d/0B16LK2xBSdvINHNXVFBLWjlfWjA/view?usp=sharing
It happened again as soon as I resumed testing. Crash report: https://crash-stats.mozilla.com/report/index/e9d1fef9-e427-4ecd-9f6c-183642150317
Can you get a regression window using mozregression?
Flags: needinfo?(ssimon)
It would also be good to confirm that disabling the media.windows-media-foundation.use-dxva preference fixes the problem.
Summary: Firefox crashed when opening right click menu → DXVA: Firefox crashed when opening right click menu
[Tracking Requested - why for this release]: I expect that this reproduces in FF37
I set media.windows-media-foundation.use-dxva to false and it doesn't seem to be crashing.
Flags: needinfo?(ssimon)
Tracking graphics related crash. Jeff - FYI, the last scheduled Beta build for 37 goes to build on Thu, Mar 19.
Flags: needinfo?(jmuizelaar)
Does this require three videos to reliably reproduce? Does the choice of videos make any difference?
Flags: needinfo?(jmuizelaar) → needinfo?(ssimon)
Flags: needinfo?(ssimon)
Whiteboard: betabreakers-fx38
Multiple HD videos is what I think is causing it
Whiteboard: betabreakers-fx38 → [betabreakers-fx38] [gfx-noted]
I'm not able to reproduce this on my Razerblade laptop with Windows 8. Jeff, what do you need to make this bug actionable?
Flags: needinfo?(jmuizelaar)
(In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #11) > I'm not able to reproduce this on my Razerblade laptop with Windows 8. Jeff, > what do you need to make this bug actionable? Hardware that reproduces the issue.
Flags: needinfo?(jmuizelaar)
(In reply to Jeff Muizelaar [:jrmuizel] from comment #12) > (In reply to Anthony Hughes, QA Mentor (:ashughes) from comment #11) > > I'm not able to reproduce this on my Razerblade laptop with Windows 8. Jeff, > > what do you need to make this bug actionable? > > Hardware that reproduces the issue. I have a system that closely matches the config in comment 0, although not exactly. * CPU: Intel Core 2 Quad Q6600 * GPU: NVidia GeForce 8600 GT * OS: Windows 7 Pro 64-bit I'll see if I can get this to reproduce although I would recommend debugging this in parallel with Simon. I believe Betabreakers is based in California so we might be able to arrange a visit if necessary.
Looks like the crash is in the driver. If we can confirm that we can consider blacklisting, but this isn't part of the normal workflow, so we're not super concerned.
> I have a system that closely matches the config in comment 0, although not exactly. > * CPU: Intel Core 2 Quad Q6600 > * GPU: NVidia GeForce 8600 GT > * OS: Windows 7 Pro 64-bit I've not been able to reproduce the crash on my system using the same driver as reported.
So all three crash reports from comment 0 and comment 1 have release channel "foobar" which seems odd. They're also all from 38.0a2 (i.e. current aurora) and I can't find any other crash reports that look similar in crash-stats. The ones with similar signatures (e.g. [1], [2] which are the top hits on [3]) are different in that they are EXCEPTION_ACCESS_VIOLATION_READ at 0x20 instead of EXCEPTION_ACCESS_VIOLATION_WRITE at <large address>. I'm not convinced this is an issue that needs looking at urgently (i.e. before 37 ships). That being said, a regression window would probably help as well as per comment 3. ssimon, would you be able to get a regression window? See http://mozilla.github.io/mozregression/ for how to do that. [1] https://crash-stats.mozilla.com/signature/?signature=nvd3dum.dll%400x780a93&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1 [2] https://crash-stats.mozilla.com/signature/?signature=nvd3dum.dll%400x780b63&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&page=1 [3] https://crash-stats.mozilla.com/search/?signature=~nvd3du&_facets=signature&_columns=date&_columns=signature&_columns=product&_columns=version&_columns=build_id&_columns=platform#facet-signature
Flags: needinfo?(ssimon)
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #16) > So all three crash reports from comment 0 and comment 1 have release channel > "foobar" which seems odd. This is intended as I instructed Betabreakers to change their update channel to prevent inadvertent updating during the testing process, thereby ensuring they're all using the same build.
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #16) > They're also all from 38.0a2 (i.e. current aurora) > and I can't find any other crash reports that look similar in crash-stats. Part of the reason that we contract BetaBreakers is to cover some of the holes in our prerelease populations.
I expect this will be a case of blacklisting this driver for DXVA or limiting the number of videos we will decode concurrently using DXVA. I'm not super concerned about it for 37 because it seems to require running multiple videos at once.
This sounds like a won't fix for 37. Anthony, where are we on having dxva as a separate blacklist entry?
Flags: needinfo?(ssimon) → needinfo?(ajones)
Layers blacklisting automatically blacklists DXVA but we have a separate DXVA blacklist.
Flags: needinfo?(ajones)
The DXVA blacklist is in the code so if this bug blows up in release we'd have no choice but to blacklist accelerated layers until we can a proper fix out.
Lawrence, comment 19 suggests we should won't fix this for 37. Anthony, is it me or you that's responsible for this bug? Just to make sure we don't each assume the other one is and nothing gets done. If it is you, we should probably move it out of graphics component.
Flags: needinfo?(lmandel)
Flags: needinfo?(ajones)
(In reply to Milan Sreckovic [:milan] from comment #23) > Lawrence, comment 19 suggests we should won't fix this for 37. Agreed.
Flags: needinfo?(lmandel)
(In reply to Milan Sreckovic [:milan] from comment #23) > Lawrence, comment 19 suggests we should won't fix this for 37. > > Anthony, is it me or you that's responsible for this bug? Just to make sure > we don't each assume the other one is and nothing gets done. If it is you, > we should probably move it out of graphics component. It is me who needs to worry about it.
Component: Graphics → Video/Audio
Looks like may not be a major concern but we still need to fix it and we can reproduce it. Is this something that is a priority for 38 or 39? I'm trying to make sure that all the bugs tracked for 39 have owners.
Assignee: nobody → matt.woodrow
Attachment #8592550 - Flags: review?(ajones)
Attachment #8592550 - Flags: review?(ajones) → review+
Priority: -- → P1
(In reply to Matt Woodrow (:mattwoodrow) from comment #27) > Created attachment 8592550 [details] [diff] [review] > Blacklist NVIDIA 8800 GTS Do we know if this fails on v341.44 driver as well?
Status: UNCONFIRMED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Flags: needinfo?(ajones)
Matt, could you fill an uplift request for 38 & 39? Thanks
Flags: needinfo?(matt.woodrow)
Comment on attachment 8592550 [details] [diff] [review] Blacklist NVIDIA 8800 GTS Approval Request Comment [Feature/regressing bug #]: HTML5 Video [User impact if declined]: Crashes when right clicking. [Describe test coverage new/current, TreeHerder]: No testing, just a blacklist change. [Risks and why]: Very low risk, simple (and restrictive) blacklist change. [String/UUID change made/needed]: None.
Flags: needinfo?(matt.woodrow)
Attachment #8592550 - Flags: approval-mozilla-beta?
Attachment #8592550 - Flags: approval-mozilla-aurora?
Comment on attachment 8592550 [details] [diff] [review] Blacklist NVIDIA 8800 GTS Approving the new blacklist entry for Beta and Aurora.
Attachment #8592550 - Flags: approval-mozilla-beta?
Attachment #8592550 - Flags: approval-mozilla-beta+
Attachment #8592550 - Flags: approval-mozilla-aurora?
Attachment #8592550 - Flags: approval-mozilla-aurora+
Comment on attachment 8592550 [details] [diff] [review] Blacklist NVIDIA 8800 GTS [Triage Comment] Should be in 38 beta 8
Attachment #8592550 - Flags: approval-mozilla-beta+ → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: